# Alym

./: .gitignore  CMakeLists.txt  Readme.txt
shaders/: CMakeLists.txt  simple_shader.vert
src/: CMakeLists.txt  EntryApp.cpp  EntryApp.h  Window.cpp  Window.h  main.cpp
textures/: CMakeLists.txt
